# mokla_cslab

./: .gitignore  CMakeLists.txt  README.md  config.json  students.txt
saahas/Katis/: katis.cpp
src/: App.cpp  AppComponent.h  AppComponent.hpp
src/controller/: LanguageController.cpp  LanguageController.hpp  MyController.hpp  ProblemController.hpp
src/db/: database.hxx
src/driver/: driver.cpp
src/dto/: DTOs.hpp  dto.hpp
src/model/: model-odb.hxx  model-odb.ixx  model.h
src/model/entities/: model.hpp
src/model/orm/: model-odb.cxx  model-odb.h  model-odb.hxx  model.sql
src/model/persistence/: orm-persist.cpp  orm-persist.hpp
